# punettsquare

./: .clang-tidy  CMakeLists.txt  LICENSE  Makefile  README.md
src/: main.c
